# agentcore-memory-browser

./: pyproject.toml
agentcore_memory_browser/: backend.py
agentcore_memory_browser/static/js/: app.js
agentcore_memory_browser/templates/: index.html
